fixed hamburger menu alignment

--- a/css/main.styl
+++ b/css/main.styl
@@ -11,7 +11,7 @@ rupture.anti-overlap = 1px 0.0625em 0.0625rem
 rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 'hd'
 
 html
-  font-family: brandon-grotesque
+  font-family: brandon-grotesque, sans-serif
   color: $primary-text
 
 li
@@ -23,7 +23,7 @@ li
   left: 16px
 
 .navbar
-  background: $primary-color
+  background: $dark-primary-color
   color: $text-color
   height: 4.8em
   width: 100%
@@ -64,10 +64,11 @@ li
   margin: 0
   padding: 0
   display: block
+  flex-direction: column
   position: relative
   right: 16px
   border: none
-  overflow: hidden
+
   cursor: pointer
   transition: background 0.3s
 
@@ -76,20 +77,22 @@ li
 
 .menu-toggle span
   background: $text-color
-  height: 0.23em
-  width: 2.2em
-  left: 10.35px
+  height: 3px
+  width: 25px
   border-radius: 1px
   display: block
   position: absolute
+  top: 21px
+  left: 10px
 
 .menu-toggle span:before, .menu-toggle span:after
   background: $text-color
-  height: 0.23em
-  width: 2.2em
+  height: 3px
+  width: 25px
   border-radius: 1px
   display: block
   position: absolute
+  left: 0
   content: ''
 
 .menu-toggle span:before
@@ -127,3 +130,4 @@ li
 
 .menu-toggle.active span:before, .menu-toggle.active span:after
   transition-delay: 0, 0.3s
+
